--- a/bh_Playground/boston_housing.ipynb
+++ b/bh_Playground/boston_housing.ipynb
@@ -362,7 +362,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "RM is related with the size of the housing, so this feature would lead the value of a property.\n",
+    "LSTAT \n",
+    "PTRATIO this ratio"
    ]
   },
   {
