boston housing prediction

--- a/bh_Playground/boston_housing.ipynb
+++ b/bh_Playground/boston_housing.ipynb
@@ -357,11 +357,11 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "RM: Is the average number of rooms among homes in the neighborhood. This feature indicates the housing average size in a neighborhood. As a general rule a big house worth more than a small house.\n",
+    "RM: Is the average number of rooms among homes in the neighborhood. This feature indicates the housing average size in a neighborhood. As a general rule a big house worth more than a small house. Therfore we could guess that a house with more rooms will cost more than a house with less rooms.\n",
     "\n",
-    "LSTAT: Is the percentage of homeowners in the neighborhood considered \"lower class\" (working poor). This feature is very interesting because indicates how fix a neighborhood is to gentrification. If this value is high, might afect in external investors...\n",
+    "LSTAT: Is the percentage of homeowners in the neighborhood considered \"lower class\" (working poor). This feature is very interesting because indicates how fix a neighborhood is to gentrification. If a neighborhood has a high percentage of \"lower class\" homeowners it might means that will not change so fast than an area where most of the residents pays a rent. Also it migh means that residents dont have enough money to invest in public areas.\n",
     "\n",
-    "PTRATIO: Is the ratio of students to teachers. I think this gives information about the neighborhood, because private schools might have a smaller ratio (20:1) than public schools 40 students per teacher. Usually private schools have better facilities and big green areas. Public schools in the other hand are located in the city based on population demand."
+    "PTRATIO: Is the ratio of students to teachers. I think this gives information about the neighborhood, because private schools might have a smaller ratio (20:1) than public schools (40:1) students per teacher. Usually private schools have better facilities and big green areas. Public schools in the other hand are located in the city based on population demand."
    ]
   },
   {
@@ -454,7 +454,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "The variance is the measure of how much the predictions vary for any given test sample. A high Variance indicates that the mode is unable to generaliza the predictions in the population. The R2 score inform us the proportion of the variance in the dependant variable that is predicted from the independant variable. The score range from 0, which means the dependant variable cannot be predicted from the independent variable. To 1, which means the dependant variable can predict with out error from the independent variable. The current score (R2: 0.923) means that more than 90% of the dependent variable can be predicted from the independent variable."
    ]
   },
   {
@@ -512,12 +513,9 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "Split the data allows to create two sets. One set for trainning and one set for testing. It is possible to graph the performance on each separately, so we can understand  better how well the model can generalize the unseen data.\n",
+    "Split the data allows to create two sets. One set for trainning and one set for testing. It is possible to graph the performance on each separately, so we can understand better how well the model can generalize the unseen data.\n",
     "1. test the data against underfitting and overfitting.\n",
-    "  * We can test the data to determine if is enough complex to capture the underlying relationships(underfitting). \n",
-    "  * When we have too much variance between samples, indicates the classifier is unable to generalize its predictions.       (Overfitting)\n",
-    "\n",
-    "\n",
+    "    * We can test the data to determine if is enough complex to capture the underlying relationships(underfitting Or understand if the classifier is unable to generalize its predictions. (Overfitting)\n",
     "2. determine the performance of our classifier. We also can evaluate the test set (score of the classifier) related to the accuracy.\n"
    ]
   },
@@ -579,7 +577,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "I choose the top right corner graph. max_depth = 3. This graph has a low train error and generalize well the problem because both curves converge to a similar value, (around 80%). The performance improve as the number of trainning points increase. Testing curve is able to generalize well and improve the score along the number of trainning points. think so."
+    "I choose the top right corner graph. max_depth = 3. This graph has a low train error and generalize well the problem because both curves converge to a similar value, (around 80%). The performance improve as the number of trainning points increase. Testing curve is able to generalize well and improve the score along the number of trainning points."
    ]
   },
   {
@@ -627,7 +625,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "The model trained with a maximum depth of 1 is suffering from high bias. The training curve is only able to reduce the error until reach the 100 testing points. After that point (100) the percent of error remains quite similar, which means the error is not reduced no matter how many training points are included. The testing score will end up close to the training score because only few parameters are being used in the model. Add more trainning data will not improve the result. A possible solution is choose the right features in order to make the model more complex.\n",
+    "\n",
+    "The Model Trained with a maximum depth of 10 is suffering from high variance. The testing score curve is increasing the score as we add more training points. The training score curve, remains high because there is a clear problem of overfitting. The high viariance means that the model has not figured out the training data well, and this is the reason because the gap between the two curves. Adding more training data it might help to improve the results."
    ]
   },
   {
@@ -642,7 +643,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "Graphs max_depth = 1 and max_depth = 3 shows high bias, which although has a good testing score results, the problem is the data is not complex enough to understand the underlying relations. The problem is not resolved adding more training points to the model. High bias occurs whe we have an inadequate model or data that is polinomial in nature with a model that can only represent linear relations.\n",
+    "\n",
+    "The best results belongs to the graph max_depth = 6. Because some variance is normal,and the training score curve is increasing the score when we add more training points, compared with the graph max_depth = 10. Its possible to control the Variance adding more data or reducing the complexity of the model, which might increase the bias."
    ]
   },
   {
