update the perceptron

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -2,38 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'numpy' from 'C:\\Users\\Carlos\\Anaconda2\\lib\\site-packages\\numpy\\__init__.pyc'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ----------\n",
-    "# \n",
-    "# In this exercise, you will add in code that decides whether a perceptron will fire based\n",
-    "# on the threshold. Your code will go in lines 32 and 34. \n",
-    "#\n",
-    "# ----------\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-5228e856ea81>, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-5228e856ea81>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    self.result = # TODO\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Perceptron:\n",
     "    \"\"\"\n",
@@ -58,12 +55,28 @@
     "        strength = np.dot(self.weights, inputs)\n",
     "        # TODO: return 0 or 1 based on the threshold\n",
     "        if strength <= self.threshold :\n",
-    "            self.result = # TODO\n",
+    "            self.result = 0\n",
     "        else:\n",
-    "            self.result = # TODO    \n",
-    "        return self.result\n",
-    "\n",
-    "\n",
+    "            self.result = 1  \n",
+    "        return self.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Perceptron.activate of <__main__.Perceptron instance at 0x0000000006725348>>\n"
+     ]
+    }
+   ],
+   "source": [
     "def test():\n",
     "    \"\"\"\n",
     "    A few tests to make sure that the perceptron class performs as expected.\n",
@@ -73,7 +86,6 @@
     "    assert p1.activate(np.array([ 1,-1])) == 0 # < threshold --> 0\n",
     "    assert p1.activate(np.array([-1, 1])) == 1 # > threshold --> 1\n",
     "    assert p1.activate(np.array([ 2,-1])) == 0 # on threshold --> 0\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    test()"
    ]
