--- a/Bayes Optimal Classifier.ipynb
+++ b/Bayes Optimal Classifier.ipynb
@@ -31,204 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Milt,',\n",
-       " \"we're\",\n",
-       " 'gonna',\n",
-       " 'need',\n",
-       " 'to',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'move',\n",
-       " 'you',\n",
-       " 'downstairs',\n",
-       " 'into',\n",
-       " 'storage',\n",
-       " 'B.',\n",
-       " 'We',\n",
-       " 'have',\n",
-       " 'some',\n",
-       " 'new',\n",
-       " 'people',\n",
-       " 'coming',\n",
-       " 'in,',\n",
-       " 'and',\n",
-       " 'we',\n",
-       " 'need',\n",
-       " 'all',\n",
-       " 'the',\n",
-       " 'space',\n",
-       " 'we',\n",
-       " 'can',\n",
-       " 'get.',\n",
-       " 'So',\n",
-       " 'if',\n",
-       " 'you',\n",
-       " 'could',\n",
-       " 'just',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'pack',\n",
-       " 'up',\n",
-       " 'your',\n",
-       " 'stuff',\n",
-       " 'and',\n",
-       " 'move',\n",
-       " 'it',\n",
-       " 'down',\n",
-       " 'there,',\n",
-       " 'that',\n",
-       " 'would',\n",
-       " 'be',\n",
-       " 'terrific,',\n",
-       " 'OK?',\n",
-       " 'Oh,',\n",
-       " 'and',\n",
-       " 'remember:',\n",
-       " 'next',\n",
-       " 'Friday...',\n",
-       " 'is',\n",
-       " 'Hawaiian',\n",
-       " 'shirt',\n",
-       " 'day.',\n",
-       " 'So,',\n",
-       " 'you',\n",
-       " 'know,',\n",
-       " 'if',\n",
-       " 'you',\n",
-       " 'want',\n",
-       " 'to,',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'wear',\n",
-       " 'a',\n",
-       " 'Hawaiian',\n",
-       " 'shirt',\n",
-       " 'and',\n",
-       " 'jeans.',\n",
-       " 'Oh,',\n",
-       " 'oh,',\n",
-       " 'and',\n",
-       " 'I',\n",
-       " 'almost',\n",
-       " 'forgot.',\n",
-       " 'Ahh,',\n",
-       " \"I'm\",\n",
-       " 'also',\n",
-       " 'gonna',\n",
-       " 'need',\n",
-       " 'you',\n",
-       " 'to',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'come',\n",
-       " 'in',\n",
-       " 'on',\n",
-       " 'Sunday,',\n",
-       " 'too...',\n",
-       " 'Hello',\n",
-       " 'Peter,',\n",
-       " 'whats',\n",
-       " 'happening?',\n",
-       " 'Ummm,',\n",
-       " \"I'm\",\n",
-       " 'gonna',\n",
-       " 'need',\n",
-       " 'you',\n",
-       " 'to',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'come',\n",
-       " 'in',\n",
-       " 'tomorrow.',\n",
-       " 'So',\n",
-       " 'if',\n",
-       " 'you',\n",
-       " 'could',\n",
-       " 'be',\n",
-       " 'here',\n",
-       " 'around',\n",
-       " '9',\n",
-       " 'that',\n",
-       " 'would',\n",
-       " 'be',\n",
-       " 'great,',\n",
-       " 'mmmk...',\n",
-       " 'oh',\n",
-       " 'oh!',\n",
-       " 'and',\n",
-       " 'I',\n",
-       " 'almost',\n",
-       " 'forgot',\n",
-       " 'ahh,',\n",
-       " \"I'm\",\n",
-       " 'also',\n",
-       " 'gonna',\n",
-       " 'need',\n",
-       " 'you',\n",
-       " 'to',\n",
-       " 'go',\n",
-       " 'ahead',\n",
-       " 'and',\n",
-       " 'come',\n",
-       " 'in',\n",
-       " 'on',\n",
-       " 'Sunday',\n",
-       " 'too,',\n",
-       " 'kay.',\n",
-       " 'We',\n",
-       " 'ahh',\n",
-       " 'lost',\n",
-       " 'some',\n",
-       " 'people',\n",
-       " 'this',\n",
-       " 'week',\n",
-       " 'and',\n",
-       " 'ah,',\n",
-       " 'we',\n",
-       " 'sorta',\n",
-       " 'need',\n",
-       " 'to',\n",
-       " 'play',\n",
-       " 'catch',\n",
-       " 'up.']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_list = sample_memo.strip().split()\n",
-    "data_list"
+    "data_list = sample_memo.strip().split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#   Maximum Likelihood Hypothesis\n",
-    "def NextWordProbability(sampletext, word):\n",
+    "from operator import itemgetter\n",
+    "def NextWordProbability(wrds, word):\n",
     "    \n",
-    "    wrds = sampletext.split() # split the text\n",
-    "    \n",
+    "    #wrds = sampletext.split() # split the text\n",
     "    maxL = dict() # a dictionary with keys the set of words that come after\n",
     "    # whose values are the number of times the key comes after that word.\n",
     "    i = 1;\n",
@@ -248,37 +72,15 @@
     "    for key, value in maxL.items():\n",
     "        maxL[key] = value / float(sum(maxL.values()))\n",
     "        \n",
+    "        #maxLS = dict(sorted(maxL.items(), key=itemgetter(1), reverse = True))\n",
+    "        \n",
     "    return maxL\n",
-    "    return {}\n",
-    "\n",
-    "# "
+    "    return {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'on': 0.8571428571428571, 'tomorrow.': 0.3333333333333333}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NextWordProbability(sample_memo, \"in\") #test looks ok."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -287,19 +89,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'and': 1.0}\n"
+      "{'to': 0.375, 'could': 0.37209302325581395, 'downstairs': 0.26687354538401864, 'know,': 0.3317886835258721, 'want': 0.4263019337063216}\n"
      ]
     }
    ],
+   "source": [
+    "print NextWordProbability(data_list, \"you\") #test looks ok."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "#   Bayes Optimal Classifier\n",
     "#   compute the optimal label for a second missing word in a row\n",
     "#   based on the possible words that could be in the first blank\n",
     "#   Finish the procedurce, LaterWords(), below\n",
     "#   You may want to import your code from the previous programming exercise!\n",
-    "#\n",
     "\n",
-    "data_list = sample_memo.strip().split()\n",
+    "#data_list = sample_memo.strip().split()\n",
     "\n",
     "words_to_guess = [\"ahead\",\"could\"]\n",
     "\n",
@@ -310,37 +122,43 @@
     "def LaterWords(sample, word, distance):\n",
     "    # TODO: Given a word, collect the relative probabilities of possible following words\n",
     "    # from @sample. You may want to import your code from the maximum likelihood exercise.\n",
-    "    \n",
-    "    prob = NextWordProbability(sample,word)\n",
-    "    \n",
+    "    wrds = sample.split() # split the text\n",
+    "    prob = NextWordProbability(wrds,word)\n",
     "    \n",
     "    # TODO: Repeat the above process--for each distance beyond 1, evaluate the words that\n",
     "    # might come after each word, and combine them weighting by relative probability\n",
-    "    # into an estimate of what might appear next.\n",
-    "    return prob\n",
+    "    # into an estimate of what might appear next\n",
+    "    \n",
+    "    n_prob = dict() # we are going to save the probabilities here...\n",
+    "    \n",
+    "    if(distance == 1):\n",
+    "        n_prob = NextWordProbability(wrds, word)\n",
+    "    else:\n",
+    "        while(distance > 1) :\n",
+    "            n_prob = {}\n",
+    "            for k1 in prob.keys():\n",
+    "                t_prob = NextWordProbability(wrds, k1)\n",
+    "                for k2 in t_prob.keys():\n",
+    "                    n_prob[k2] = n_prob.get(k2, 0) + prob[k1] * t_prob[k2]\n",
+    "            prob = n_prob\n",
+    "            print distance\n",
+    "            distance = distance - 1\n",
+    "    \n",
+    "    sorted_x = sorted(n_prob.items(), key=itemgetter(1), reverse = True)[0][0]\n",
+    "    return  sorted_x\n",
     "    return {}\n",
     "    \n",
-    "print LaterWords(sample_memo,\"ahead\",2)"
+    "LaterWords(sample_memo,\"and\", 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'to': 0.3333333333333333, 'all': 0.23076923076923078, 'you': 0.8417266187050361}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print LaterWords(sample_memo,\"need\",2)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
