--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -935,8 +935,8 @@
     "FN = 0 # No predicted negatives in the naive case\n",
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = None\n",
-    "recall = None\n",
+    "accuracy = tp / (tp + fp)\n",
+    "recall = tp / \n",
     "precision = None\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
