looking for the best classifier.

--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -999,7 +999,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "***Answer: ***\n",
+    "\n",
+    "### Random Forest\n",
+    "##### Real world application\n",
+    "here and here.\n",
+    "##### Strengths\n",
+    "Random forest and Logist regression are both fast and scalable.\n",
+    "##### Weaknesses\n",
+    "here and here.\n",
+    "##### Why this model\n",
+    "here and here.\n",
+    "##### Random Forest, References\n",
+    "link 1, link 2\n",
+    "\n",
+    "### Gaussian Naive Bayes\n",
+    "##### Real world application\n",
+    "here and here.\n",
+    "##### Strengths\n",
+    "here and here.\n",
+    "##### Weaknesses\n",
+    "here and here.\n",
+    "##### Why this model\n",
+    "here and here.\n",
+    "##### Gaussian Naive Bayes, References\n",
+    "link 1, link 2\n",
+    "\n",
+    "### Logistic Regression\n",
+    "##### Real world application\n",
+    "here and here.\n",
+    "##### Strengths\n",
+    "here and here.\n",
+    "##### Weaknesses\n",
+    "here and here.\n",
+    "##### Why this model\n",
+    "here and here.\n",
+    "##### Logistic regression, References\n",
+    "link 1, link 2"
    ]
   },
   {
