--- a/Gaussian NB Example.ipynb
+++ b/Gaussian NB Example.ipynb
@@ -3,18 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.naive_bayes import GaussianNB\n"
+    "from sklearn.naive_bayes import GaussianNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -27,10 +25,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAEICAYAAABWJCMKAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGe9JREFUeJzt3X10VfWd7/H3x4gatBJtsEp4nFvL\n9QlkPKU6asdbcVDGC5TaVoda7UxXqlNX29sOSyy3atvhapddtbVWbVq56kjFdkRKr1jUsV6rHVqC\ngIiYilwREkajGNAmjILf+8fZ6CE9IQ/nJDvJ/rzWOuvs/du/nN/3x8P5nP1wshURmJlZ9hyQdgFm\nZpYOB4CZWUY5AMzMMsoBYGaWUQ4AM7OMcgCYmWWUA8AGBUl3SPrntOswG0gcAJY5kh6T9Pm06zBL\nmwPAzCyjHAA2IEmaJOkpSW9Iuhc4pGDbEZL+j6RmSa8nyyOTbfOBM4GbJb0p6eak/QeStkjaKWmV\npDP3M/Y0Sc8mYzdK+qek/SxJWyV9XdKrkl6UNLvg5/5W0upkjC2Srm33umdI+p2klmT7pUn7wZK+\nK+klSS9Luk1SZdn+MC2zHAA24Eg6CFgC/AtwJPAL4BMFXQ4A/jcwBhgNtAE3A0TEPOC3wBURcVhE\nXJH8zErg5OT1fgb8QtIhFHc78IWIeB9wIvBowbajgWqgBrgEqJM0Ptn2J+CzQBXwt8DlkmYmcxoN\nPAj8EBie1LIm+bnvAB9K2j6YvPbVXfijMtsv+XcB2UAj6aPAIqAmkn/Akn4HPBoR/7NI/5OB30TE\nEcn6Y8DdEfHT/YzxOnBWRKwtsu0lYD5wT0TsLGg/C3gEGBYRf0rafg6si4hvF3md7wMREf9D0lXA\n5Ij4eLs+At4EJkTEC0nbacDPImJcR/WbdYX3AGwgGgE0xr6fXjbvXZA0VNKPJW2WtBN4HKiSVNHR\nC0r6mqQNknZIagGGkf8kX8wngGnAZkn/N3lD3uv1vW/+BXWNSMb4iKTfJIemdgCXFYwxCnihyFjD\ngaHAquTQUAvw66TdrCQOABuItgE1yafjvUYXLH8NGA98JCIOBz6atO/tv89ub3K8/0rgU8AREVEF\n7Cjov4+IWBkRM4CjyB+K+nnB5iMkHdqurqZk+WfAUmBURAwDbisYYwvwX4oM9yr5Q1gnRERV8hgW\nEYcVq82sOxwANhD9O7Ab+JKkAyXNAiYXbH8f+TfNFklHAte0+/mXgb9o13830AwcKOlq4PBiA0s6\nSNJsScMi4m1gJ7CnXbdvJv3OBM4nf45i7zjbI2KXpMnA3xX8zEJgiqRPJXN6v6STI+Id4CfAjZKO\nSmqokTS1sz8ks844AGzAiYi3gFnApcDrwKeBxQVdvg9Ukv/0vIL8IZNCPwAuSK4QuglYTv4E7B/J\nH7LZRf4TeUcuBl5MDi9dBnymYNt/JDU1kX9Tvywinku2/SPwLUlvkD+J++6eQ0S8RP6w0teA7eRP\nAE9MNl8JbARWJGM+Qn4Px6wkPglsVibJSeC7I2Jk2rWYdYX3AMzMMsoBYGaWUT4EZGaWUd4DMDPL\nqAPTLmB/qqurY+zYsWmXYWY2YKxaterViOjSFwX7dQCMHTuW+vr6tMswMxswJG3uvFeeDwGZmWWU\nA8DMLKMcAGZm/dBNN93Ecccdx+zZszvv3EP9+hyAmVlW3XLLLTz44IOMG9d7v/XbewBmZv3MZZdd\nxqZNm5g+fTo33nhjr43Tr78IlsvlwlcBmVkW7b0Ksrq6o9tSFCdpVUTkutK35D0ASaOSm1xskLRe\n0peL9JGkmyRtlPS0pL8sdVwzs8FmyepGTr/+UcbNfYD/2LGLZU9v69XxynEIaDfwtYg4DjgV+KKk\n49v1OQ84NnnUAreWYVwzs0FjyepGrlq8jsaWNgLY/U7w7QeeZcnqxl4bs+QAiIhtEfFUsvwGsIH8\nTasLzQDuirwV5G/Pd0ypY5uZDRY3LG+g7e197y206+093LC8odfGLOtJYEljgUnA79ttqmHfG2xs\n5c9DYu9r1Eqql1Tf3NxczvLMzPqtppa2brWXQ9kCQNJhwH3AVyJiZ/vNRX6k6NnniKiLiFxE5IYP\n932vzSwbRlRV7rM+8vIFVAwd9mft5VSWAJA0hPyb/8KIWFyky1ZgVMH6SN67UbaZWebNmTqeyiEV\n+7RVDqlgztTeu/tnOa4CEnA7sCEivtdBt6XAZ5OrgU4FdkRE757eNjMbQGZOquG6WSdRU1WJgJqq\nSq6bdRIzJxU9Wl4W5fgm8Onkb5K9TtKapO3rwGiAiLgNWEb+htcbgVbgc2UY18xsUJk5qaZX3/Db\nKzkAIuIJih/jL+wTwBdLHcvMzMrHvwrCzCyjHABmZhnlADAzyygHgJlZRjkAzMwyygFgZpZRDgAz\ns4xyAJiZZZQDwMwsoxwAZmYZ5QAwM8soB4CZWUY5AMzMMsoBYGaWUQ4AM7OMKtctIRdIekXSMx1s\nP0vSDklrksfV5RjXzMx6rhx3BAO4A7gZuGs/fX4bEeeXaTwzMytRWfYAIuJxYHs5XsvMzPpGX54D\nOE3SWkkPSjqho06SaiXVS6pvbm7uw/LMzLKlrwLgKWBMREwEfggs6ahjRNRFRC4icsOHD++j8szM\nsqdPAiAidkbEm8nyMmCIpOq+GNvMzIrrkwCQdLQkJcuTk3Ff64uxzcysuLJcBSTpHuAsoFrSVuAa\nYAhARNwGXABcLmk30AZcGBFRjrHNzKxnyhIAEXFRJ9tvJn+ZqJmZ9RP+JrCZWUY5AMzMMsoBYGaW\nUQ4AM7OMcgCYmWWUA8DMLKMcAGZmGeUAMDPLKAeAmVlGOQDMzDLKAWBmllEOADOzjHIAmNk+rr32\nWr773e+mXYb1AQeAmVlGOQDMjPnz5zN+/HimTJlCQ0ND2uWU5O6772by5MmcfPLJfOELX2DPnj1p\nl9RvOQDMMm7VqlUsWrSI1atXs3jxYlauXJl2ST22YcMG7r33Xp588knWrFlDRUUFCxcuTLusfqtc\ndwRbAJwPvBIRJxbZLuAHwDSgFbg0Ip4qx9hm1jNLVjdyw/IGNjy8iEOPOpmHGl5n5qQapk+fnnZp\n3bJ3Hk0tbejZ5bSsWMmHP/xhANra2jjqqKNSrrD/KksAAHeQv+PXXR1sPw84Nnl8BLg1eTazFCxZ\n3chVi9fR9nb+8Mgbu/Zw1eJ1KVfVfe3nsaPtLfShv+bam7/HzEk1KVfX/5XlEFBEPA5s30+XGcBd\nkbcCqJJ0TDnGNrPuu2F5w7tvmgePOoHW5/+dP7W2cv3S1fzqV79KubquK5wHwCFjJrJzw2+Zf98K\nALZv387mzZvTKq/f66tzADXAloL1rUnbn5FUK6leUn1zc3OfFGeWNU0tbe8uH3z0Bzn0v57Jtju+\nxNo7rubMM89MsbLuKZwHwEHVo6k682LW/mQOEyZM4JxzzmHbtm0pVdf/lesQUGdUpC2KdYyIOqAO\nIJfLFe1jZqUZUVVJY8Gb57C/+jTD/urT1FRVsmDux1KsrHvazwPg0OM+yodOm8qTA2geaemrPYCt\nwKiC9ZFAUx+NbWbtzJk6nsohFfu0VQ6pYM7U8SlV1DODZR5p6asAWAp8VnmnAjsiwvtlZimZOamG\n62adRE1VJQJqqiq5btZJA+7E6WCZR1oUUfpRFkn3AGcB1cDLwDXAEICIuC25DPRm4Fzyl4F+LiLq\nO3vdXC4X9fWddjMzs4SkVRGR60rfspwDiIiLOtkewBfLMZaZmZWHvwlsZpZRDgAzs4xyAJiZZZQD\nwMwsoxwAZmYZ5QAwM8soB4CZWUY5AMzMMsoBYGaWUQ4AM7OMcgCYmWWUA8DMLKMcAGZmGeUAMDPL\nKAeAmVlGlSUAJJ0rqUHSRklzi2y/VFKzpDXJ4/PlGNfMzHqu5BvCSKoAfgScQ/7evyslLY2IZ9t1\nvTcirih1PDMzK49y7AFMBjZGxKaIeAtYBMwow+uamVkvKkcA1ABbCta3Jm3tfULS05L+VdKoMoxr\nZmYlKEcAqEhb+zvN/woYGxETgEeAOzt8MalWUr2k+ubm5jKUZ2ZmxZQjALYChZ/oRwJNhR0i4rWI\n+M9k9SfAKR29WETURUQuInLDhw8vQ3lmZlZMOQJgJXCspHGSDgIuBJYWdpB0TMHqdGBDGcY1M7MS\nlHwVUETslnQFsByoABZExHpJ3wLqI2Ip8CVJ04HdwHbg0lLHNTOz0iii/eH6/iOXy0V9fX3aZZiZ\nDRiSVkVErit9/U1gM7OMcgCYmWWUA8DMLKMcAGZmGeUAMDPLKAeAmVlGOQDMzDLKAWBmllEOADOz\njHIAmJlllAPAzCyjHABmZhnlADAzyygHgJlZRjkAzMwyygFgZpZRZQkASedKapC0UdLcItsPlnRv\nsv33ksaWY1wzM+u5kgNAUgXwI+A84HjgIknHt+v2D8DrEfFB4EbgO6WOa2ZmpSnHHsBkYGNEbIqI\nt4BFwIx2fWYAdybL/wqcLUllGNvMzHqoHAFQA2wpWN+atBXtExG7gR3A+4u9mKRaSfWS6pubm8tQ\nnpmZFVOOACj2Sb79nea70iffGFEXEbmIyA0fPrzk4szMrLhyBMBWYFTB+kigqaM+kg4EhgHbyzC2\nmZn1UDkCYCVwrKRxkg4CLgSWtuuzFLgkWb4AeDQiiu4BmJlZ3ziw1BeIiN2SrgCWAxXAgohYL+lb\nQH1ELAVuB/5F0kbyn/wvLHVcMzMrTckBABARy4Bl7dquLljeBXyyHGOZmVl5+JvAZmYZ5QAwM8so\nB4CZWUY5AMzMMsoBYGaWUQ4AM7OMcgCYmWWUA8DMLKMcAGZmGeUAMDPLKAeAmVlGOQDMzDLKAWBm\nllEOADOzjHIAmJllVEkBIOlISQ9Lej55PqKDfnskrUke7e8WZmZmKSh1D2Au8G8RcSzwb8l6MW0R\ncXLymF7imGZmVgalBsAM4M5k+U5gZomvZ2ZmfaTUAPhARGwDSJ6P6qDfIZLqJa2Q5JAwM+sHOr0n\nsKRHgKOLbJrXjXFGR0STpL8AHpW0LiJe6GC8WqAWYPTo0d0YwszMuqPTAIiIKR1tk/SypGMiYpuk\nY4BXOniNpuR5k6THgElA0QCIiDqgDiCXy0WnMzAzsx4p9RDQUuCSZPkS4JftO0g6QtLByXI1cDrw\nbInjmplZiUoNgOuBcyQ9D5yTrCMpJ+mnSZ/jgHpJa4HfANdHhAPAzCxlnR4C2p+IeA04u0h7PfD5\nZPl3wEmljGNmZuXnbwKbmWWUA8DMLKMcAGZmGeUAMDPLKAeAmVlGOQDMzDLKAWBmllEOADOzjHIA\nmJlllAPAzCyjHABmZhnlADAzyygHwADx4osvcuKJJ6ZdhpkNIg4AM7OMcgAMILt37+aSSy5hwoQJ\nXHDBBbS2tqZdUo/MnDmTU045hRNOOIG6urq0yzHLLAfAANLQ0EBtbS1PP/00hx9+OLfcckvaJfXI\nggULWLVqFfX19dx000289tpraZdklkklBYCkT0paL+kdSbn99DtXUoOkjZLmljJmlixZ3cjp1z/K\nuLkP8Ilbf0f10SM4/fTTAfjMZz7DE088kXKFXVM4j9Ovf5R/vOqfmThxIqeeeipbtmzh+eeff6/z\nwoUwdiwccED+eeHCtMo2G/RK3QN4BpgFPN5RB0kVwI+A84DjgYskHV/iuIPektWNXLV4HY0tbQTw\n8s5dtLTuZsnqxnf7SEqvwC5qP48Xnv49S5ct5+u33sfatWuZNGkSu3btyndeuBBqa2HzZojIP9fW\nOgTMeklJARARGyKioZNuk4GNEbEpIt4CFgEzShk3C25Y3kDb23v2adu98xWurlsMwD333MMZZ5yR\nRmnd0n4e7/xnKxx8KDc9/hLPPfccK1aseK/zvHnQ/rxGa2u+3czKri/OAdQAWwrWtyZtRUmqlVQv\nqb65ubnXi+uvmlra/qxtyPtH8f9WLGPChAls376dyy+/PIXKuqf9PCrHnUK88w4rv/cPfOMb3+DU\nU099b+NLLxV/kY7azawknd4UXtIjwNFFNs2LiF92YYxixymio84RUQfUAeRyuQ77DXYjqippLHjz\nPHDYBxjx+VupqarkybkfS7Gy7mk/Dx04hA986pvUVFXyi/bzGD06f9invdGje7lKs2zqdA8gIqZE\nxIlFHl1584f8J/5RBesjgaaeFJslc6aOp3JIxT5tlUMqmDN1fEoV9Uy35jF/Pgwdum/b0KH5djMr\nu744BLQSOFbSOEkHARcCS/tg3AFt5qQarpt1EjVVlQioqarkulknMXNSh0fP+qVuzWP2bKirgzFj\nQMo/19Xl282s7BTR86Mskj4O/BAYDrQAayJiqqQRwE8jYlrSbxrwfaACWBARXfpIl8vlor6+vsf1\nmZlljaRVEdHhZfmFOj0HsD8RcT9wf5H2JmBawfoyYFkpY5mZWXn5m8BmZhnlADAzyygHgJlZRjkA\nzMwyygFgZpZRDgAzs4xyAJiZZZQDwMwsoxwAZmYZ5QAwM8soB4CZWUY5AMzMMsoBYGaWUQ4AM7OM\ncgCYmWWUA8DMLKNKCgBJn5S0XtI7kjq8A42kFyWtk7RGkm/xZWbWD5R0RzDgGWAW8OMu9P1vEfFq\nieOZmVmZlHpLyA0AkspTjZmZ9Zm+OgcQwEOSVkmq3V9HSbWS6iXVNzc391F5ZmbZ0+kegKRHgKOL\nbJoXEb/s4jinR0STpKOAhyU9FxGPF+sYEXVAHUAul4suvr6ZmXVTpwEQEVNKHSQimpLnVyTdD0wG\nigaAmZn1jV4/BCTpUEnv27sM/A35k8dmZpaiUi8D/bikrcBpwAOSliftIyQtS7p9AHhC0lrgD8AD\nEfHrUsY1M7PSlXoV0P3A/UXam4BpyfImYGIp45iZWfn5m8BmZhnlADAzyygHgJlZRjkAzMwyygFg\nZpZRDoCeWrgQxo6FAw7IPy9cmHZFZmbdUupvA82mhQuhthZaW/Prmzfn1wFmz06vLjOzbvAeQE/M\nm/fem/9era35djOzAcIB0BMvvdS9djOzfsgB0BOjR3ev3cysH3IA9MT8+TB06L5tQ4fm283MBggH\nQE/Mng11dTBmDEj557o6nwA2swHFVwH11OzZfsM3swFt0O8B3HXXXUyYMIGJEydy8cUXp12OmVm/\nMaj3ANavX8/8+fN58sknqa6uZvv27WmXZGbWb5QUAJJuAP478BbwAvC5iGgp0u9c4AdABfDTiLi+\nlHH3Z8nqRm5Y3kBTSxt69tf85RlTqa6uBuDII4/srWHNzAacUg8BPQycGBETgD8CV7XvIKkC+BFw\nHnA8cJGk40sct6glqxu5avE6GlvaCKCl9S0ea2hmyerG3hjOzGxAKykAIuKhiNidrK4ARhbpNhnY\nGBGbIuItYBEwo5RxO3LD8gba3t7z7vohYyay49nH+V+L/wDgQ0BmZgXKeRL474EHi7TXAFsK1rcm\nbUVJqpVUL6m+ubm5WwU0tbTts37Q8DEMO+3TrLntK0ycOJGvfvWr3Xo9M7PBrNNzAJIeAY4usmle\nRPwy6TMP2A0U+5WYKtIWHY0XEXVAHUAul+uwXzEjqippbBcCh510NuPPPJ8n536sOy9lZjbodRoA\nETFlf9slXQKcD5wdEcXesLcCowrWRwJN3Smyq+ZMHc9Vi9ftcxiockgFc6aO743hzMwGtFKvAjoX\nuBL464ho7aDbSuBYSeOARuBC4O9KGbcjMyfljyztvQpoRFUlc6aOf7fdzMzeU+r3AG4GDgYelgSw\nIiIukzSC/OWe0yJit6QrgOXkLwNdEBHrSxy3QzMn1fgN38ysC0oKgIj4YAftTcC0gvVlwLJSxjIz\ns/Ia9L8KwszMinMAmJlllAPAzCyjHABmZhnlADAzyygV/+5W/yCpGdjcwx+vBl4tYzlpGixzGSzz\nAM+lPxos84DS5jImIoZ3pWO/DoBSSKqPiFzadZTDYJnLYJkHeC790WCZB/TdXHwIyMwsoxwAZmYZ\nNZgDoC7tAsposMxlsMwDPJf+aLDMA/poLoP2HICZme3fYN4DMDOz/XAAmJll1KAOAEnflvS0pDWS\nHkp+TfWAJOkGSc8l87lfUlXaNfWEpE9KWi/pHUkD7pI9SedKapC0UdLctOvpKUkLJL0i6Zm0aymV\npFGSfiNpQ/Jv68tp19QTkg6R9AdJa5N5fLPXxxzM5wAkHR4RO5PlLwHHR8RlKZfVI5L+Bng0ub/C\ndwAi4sqUy+o2SccB7wA/Bv4pIupTLqnLJFUAfwTOIX+nu5XARRHxbKqF9YCkjwJvAndFxIlp11MK\nSccAx0TEU5LeB6wCZg60vxflb6pyaES8KWkI8ATw5YhY0VtjDuo9gL1v/olD2c+9iPu7iHgoInYn\nqyvI31pzwImIDRHRkHYdPTQZ2BgRmyLiLWARMCPlmnokIh4HtqddRzlExLaIeCpZfgPYAAy4u0JF\n3pvJ6pDk0avvWYM6AAAkzZe0BZgNXJ12PWXy98CDaReRQTXAloL1rQzAN5rBTNJYYBLw+3Qr6RlJ\nFZLWAK8AD0dEr85jwAeApEckPVPkMQMgIuZFxChgIXBFutXuX2dzSfrMA3aTn0+/1JV5DFAq0jZg\n9yoHG0mHAfcBX2m39z9gRMSeiDiZ/B7+ZEm9eniu1HsCpy4ipnSx68+AB4BrerGcknQ2F0mXAOcD\nZ0c/PnnTjb+TgWYrMKpgfSTQlFItViA5Zn4fsDAiFqddT6kiokXSY8C5QK+dqB/wewD7I+nYgtXp\nwHNp1VIqSecCVwLTI6I17XoyaiVwrKRxkg4CLgSWplxT5iUnT28HNkTE99Kup6ckDd97dZ+kSmAK\nvfyeNdivAroPGE/+qpPNwGUR0ZhuVT0jaSNwMPBa0rRiIF7RJOnjwA+B4UALsCYipqZbVddJmgZ8\nH6gAFkTE/JRL6hFJ9wBnkf+1wy8D10TE7akW1UOSzgB+C6wj/38d4OsRsSy9qrpP0gTgTvL/tg4A\nfh4R3+rVMQdzAJiZWccG9SEgMzPrmAPAzCyjHABmZhnlADAzyygHgJlZRjkAzMwyygFgZpZR/x+y\nZst5iYPpfwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xa84fbe0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = [-1, -2, -3, 1, 2, 3]\n",
+    "y = [-1, -1, -2, 1, 1, 2]\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "axes = fig.add_subplot(111)\n",
+    "\n",
+    "axes.scatter(x, y) #ax.scatter(z, y)\n",
+    "axes.scatter([-0.8, -2.5],[-1, -1.8], color='red') # checking the performance...\n",
+    "axes.set_title('data space')\n",
+    "\n",
+    "for i, txt in enumerate(Y):\n",
+    "    axes.annotate(txt, (x[i],y[i]))\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -49,10 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -82,9 +120,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
