--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -325,6 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![analysis](/analysis.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 1\n",
     "Consider the total purchase cost of each product category and the statistical description of the dataset above for your sample customers.  \n",
     "\n",
